test/sema/methods/ptr_receiver_wrong_mutability.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
trait Foo {
  fn foo(self: *Self) {}
  fn bar(self: *mut Self) {}
}

struct S {
  impl Foo;
}

fn main() {
  let s = gcMut(S{});
  let s2 = gc(S{});

  // CHECK: [[# @LINE + 1 ]]:5: error: cannot unify '*mut S' with '*S'
  s.foo();

  // CHECK: [[# @LINE + 1 ]]:6: error: cannot unify '*S' with '*mut S'
  s2.bar();
}
